@@ -33,7 +33,7 @@ check_PROGRAMS = tversion tabort_prec_max tassert tabort_defalloc1	\
      tsprintf tsqr tsqrt tsqrt_ui tstckintc tstdint tstrtofr tsub	\
      tsub1sp tsub_d tsub_ui tsubnormal tsum tswap ttan ttanh ttrunc	\
      tui_div tui_pow tui_sub turandom tvalist ty0 ty1 tyn tzeta		\
-     tzeta_ui tbeta
+     tzeta_ui tbeta tget_q
 
 # Before Automake 1.13, we ran tversion at the beginning and at the end
 # of the tests, and output from tversion appeared at the same place as
